# kelecorix

./: README.md
current/: 404.html  about.html  app.css  app.js  index.html  technology.html
data/en/area/: aerospace.md  telecom.md
data/en/blog/: haskell-hands-on-yaml.md  rust-hands-on-csv.md  rust-hands-on-yaml.md
data/en/news/: 2017-11-kelecorix-tautachrome.md
src/: README.md  TODO.md  kelecorix.cabal  stack.yaml
src/app/: Context.hs  Kelecorix.hs
src/css/: klk-base-sig.css  klx-base.css  klx-ext-6-max-width-736-iphone-678-plus.css  klx-ext-7-max-width-667-iphone-678.css
src/css/plugins/: slick-theme.css
src/js/: autoplay.js  custom.js~  hoverdropdown.js
src/tpl/en/: about.tpl  blog.tpl  default-about.tpl  default-blog.tpl  default-index.tpl  default-news-post.tpl  default.tpl  footer.tpl  index.tpl  news-item.tpl  news-post.tpl  news.tpl  post-item.tpl  post.tpl  services.tpl  solutions.tpl  technology.tpl
src/tpl/en/area/: telecom.tpl
src/tpl/ru/: blog.tpl  default-index.tpl  index.tpl  post.tpl
src/tpl/ua/: default-index.tpl  default-news.tpl  default.tpl  index.tpl  news-item.tpl  news.tpl  solutions.tpl
