name:                kelecorix
version:             0.9.1.20
synopsis:            kelecorix website generator
description:         
homepage:            www.kelecorix.com
license:             AllRightsReserved
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           2015,2016 Sergey Bushnyak
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable kelecorix
  main-is:             Kelecorix.hs
  hs-source-dirs: 
                       app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hakyll
                     , errors
                     , json
                     , directory
                     , MissingH
                     , pandoc
                     , blaze-html
                     , time
                     , filepath
                     , old-locale
                     , highlighting-kate
                     , text
                     , containers
                     , unordered-containers
                     , aeson
                     , mtl
  default-language:    Haskell2010
